@@ -1,8 +1,12 @@
 			CHANGELOG for KAME kit
-$KAME: CHANGELOG,v 1.2620 2004/06/08 10:36:13 suz Exp $
+$KAME: CHANGELOG,v 1.2621 2004/06/08 10:46:32 suz Exp $
 
 <200406>
 2004-06-08  SUZUKI, Shinsuke  <suz@crl.hitachi.co.jp>
+	* kame/pimsd/mld6_proto.c, mld6v2_proto.c:
+	- accepts MLDv2 Group-Specific Query
+	- specifies MLDv2 filter_mode based on the received MLDv2 report type
+
 	* kame/pimsd/mld6_proto.[ch], mld6v2_proto.c:
 	decides the MLD-compat-mode based on an arriving MLDv1/v2 packet.
 
